<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shop Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- Header Message -->
    <string name="Launcher_Title">Welcome To Simple Stock/Shop Manager</string>
    <string name="Register_Title">Please Register Your Account</string>
    <string name="Login_Title">Please Login To Access Your Account</string>
    <!-- Progress message -->
	<string name="Progress_waitRegister">"Please wait we are registring your account"</string>
	<string name="Progress_waitLogin">"Please wait we are login you..."</string>
	<!-- Launcher Page -->
	<string name="Launcher_Add">Thank you for choosing our appplication.</string>
	<!-- \nThis Application Developed and Maintain by SRM Mobile Solution\nWe are mobile solution company since 2012\nYou can contact us for Mobile or web related bussiness solution\n<b>Email:rakki.bsc2009@gmail.com</b> -->
    <!-- registration String -->
	<string name="Register_EnterUsername">Enter Your UserName</string>
	<string name="Register_EnterPassword">Enter Your Passowrd</string>
	<string name="Register_EnterEmail">Enter Your Email Address</string>
	<string name="Register_EmailError">Please Enter Valid Email Address</string>
	<string name="Register_UserError">UserName Should Not Be Empty</string>
	<string name="Register_PasswordError">Passowrd Should Not Be Empty</string>
	<string name="Register_Register">Register</string>
	<!-- Login Strings -->
	<string name="Login_Login">Login</string>
	<string name="Login_ForgotPassword"><u>Need our help to login?</u></string>
	<string name="Login_Create"><u>Create new account?</u></string>
	<string name="General_Cancel">Cancel</string>
	<string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <!-- Menus Title -->
    <string name="MenuT_Entry">Entrys</string>
    <string name="MenuT_Reports">Reports</string>
    <!-- Add item general info -->
    <string name="AIGI_ItemGCode">Item Group Code</string>
    <string name="AIGI_ItemCode">Item Code</string>
    <string name="AIGI_Name">Product Name</string>
    <string name="AIGI_Category">Category</string>
    <string name="AIGI_Location">Location Of Product In Shop</string>
    <string name="AIGI_SinglePrice">Unit Price We Decided</string>
    <string name="AIGI_ExpireDate">Expired Date</string>
    <!-- String Arrays --> 
	  <string-array name="Menuoption">
        <item tag="title">@string/MenuT_Entry</item>
        <item>Add item to stock</item>
        <item >Purchase Entry</item>
        <item>Salse Entry</item>
        <item>Purchase Return</item>
        <item>Salse Returns</item>
        <item>Salary Paid</item>
        <item>Other Expense</item>
        <item tag="title">@string/MenuT_Reports</item>
        <item>Stock </item>
    </string-array>
     
    
</resources>
