<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
   <RelativeLayout style="@style/FillWrap" android:background="@color/Header_BackgroundColor" android:minHeight="40dp" android:gravity="center_vertical" android:padding="10dp" >
       <TextView style="@style/FillWrap" android:text="@string/Login_Title" android:textSize="@dimen/Header_Font" android:textColor="@color/Header_TextColor" android:gravity="center" android:textStyle="bold"/>
   </RelativeLayout> 
    <LinearLayout
        style="@style/FillWrap"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/Login_username"
            style="@style/Editext_FWCenterGravity"
            android:layout_marginBottom="10dp"
            android:hint="@string/Register_EnterUsername" />

          <EditText
            android:id="@+id/Login_password"
            style="@style/Editext_FWCenterGravity"
            android:layout_marginBottom="10dp"
            android:hint="@string/Register_EnterPassword"
            android:inputType="textPassword" />

        <LinearLayout
            style="@style/FillWrap"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:padding="10dp" >

            <Button
                android:id="@+id/Login_Login"
                style="@style/Button"
                android:layout_weight="1"
                android:text="@string/Login_Login" android:onClick="clicker" />

            <Button
                android:id="@+id/Login_Cancel"
                style="@style/Button"
                android:layout_weight="1"
                android:text="@string/General_Cancel" android:onClick="clicker"/>
        </LinearLayout>
        <TextView style="@style/LinkedTextView" android:id="@+id/Login_Create" android:text="@string/Login_Create" android:gravity="right" android:layout_marginRight="10dp"/>
         <TextView style="@style/LinkedTextView" android:id="@+id/Login_Forgot" android:text="@string/Login_ForgotPassword" android:gravity="right" android:layout_marginRight="10dp"/>
    </LinearLayout>

</RelativeLayout>